# all-hands-on-ml

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
deployment/: model_train.ipynb
deployment/fastapi/: Dockerfile  FastAPI_Model_Deployment_README.md  serve_model_fastapi.py
deployment/mlflow/: Dockerfile  MLflow_Docker_Deployment_README.md
introduction/: titanic_data_preprocessing.ipynb
model_finetuning/: demo_mlp.py  demo_task_shift.py  freeze_bert_layers.py  freeze_resent_layers.py
notebooks/: 12_gridsearch_optuna_mlflow_demo.py  1_titanic_data_preprocessing.ipynb  2_logistic_regression_titanic.ipynb  3_decision_tree_titanic.ipynb  4_random_forest_titanic.ipynb  5_normalize_and_split_titanic.ipynb  6_logistic_regression_titanic.ipynb  7_svm_logreg_dtree_comparison.py  8_xgboost_and_others_comparison.py
src/: 10_regression_models_comparison.py  11_anomaly_detection_ocsvm_iforest.py  12_gridsearch_optuna_mlflow_demo.py  1_titanic_data_preprocessing.ipynb  2_logistic_regression_titanic.ipynb  3_decision_tree_titanic.ipynb  4_random_forest_titanic.ipynb  6_logistic_regression_titanic.ipynb  9_kmeans_dbscan_comparison_notebook.py
