[project]
name = "all-hands-on-ml"
version = "0.1.0"
description = ""
authors = [
    { name = "Giuseppe", email = "giuseppe.fur96@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "notebook (>=7.4.2,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
